<resources>
    <string name="app_name">BAC Calculator</string>
    <string name="weight">Weight (lbs)</string>
    <string name="toggleswitch">Gender</string>
    <string name="savebutton">Save</string>
    <string name="drinksize">Drink Size</string>
    <string name="oneoz">1 oz</string>
    <string name="fiveoz">5 oz</string>
    <string name="twelveoz">12 oz</string>
    <string name="alcoholpercentage">Alcohol %</string>
    <string name="drinkbutton">Add Drink</string>
    <string name="resetbutton">Reset</string>
    <string name="baclevel">BAC Level:</string>
    <string name="bacvalue">0.00</string>
    <string name="status">Your Status:</string>
    <string name="resultdisplay">You\'re safe</string>
    <string name="nullvalue" />
    <string name="hintmsg">Enter Weight</string>
</resources>
