<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.venkatesh.baccalculator.MainActivity"
    android:padding="10dp">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/weight"
            android:id="@+id/tvweight" />

        <EditText
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="6"
            android:id="@+id/etweight"
            android:hint="@string/hintmsg" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggleswitch"
            android:id="@+id/genderswitch"
            android:layout_marginLeft="5dp"
            android:checked="false"
            android:textOff="F"
            android:textOn="M"
            android:showText="true"

            />

    </TableRow>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/savebutton"
        android:id="@+id/savebutton"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/drinksize"
            android:id="@+id/tvdrinksize" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:id="@+id/radiogroup1">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oneoz"
                android:id="@+id/oneozradiobutton"
                android:checked="true"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fiveoz"
                android:id="@+id/fiveozradiobutton"
                android:layout_marginLeft="15dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twelveoz"
                android:id="@+id/twelveozradiobutton"
                android:layout_marginLeft="15dp"/>
        </RadioGroup>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/alcoholpercentage"
            android:id="@+id/tvalcohol" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/alcoholseekbar"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:progress="@integer/zero"
            android:max="@integer/maxvalue"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/nullvalue"
            android:id="@+id/tvpercdisplay" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drinkbutton"
            android:layout_weight="1"
            android:id="@+id/adddrinkbutton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resetbutton"
            android:layout_weight="1"
            android:id="@+id/resetbutton" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/baclevel"
            android:id="@+id/tvbaclevel"
            android:textSize="35sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/bacvalue"
            android:id="@+id/tvresultbac"
            android:layout_marginLeft="10dp"
            android:textSize="35sp"/>
    </TableRow>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:id="@+id/bacprogressbar"
        android:indeterminate="false"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:max="25" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/status"
            android:id="@+id/tvstatus" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/resultdisplay"
            android:id="@+id/tvresultprint"
            android:background="@color/colorGreen"
            android:textColor="@color/colorWhite"
            android:layout_marginLeft="15dp"/>

    </TableRow>

</LinearLayout>
